Refactor inventory query layer from filter chain to merge-based sources
Replace the InventoryFilter chain with InventorySource implementations that
merge offers into a shared accumulator (InventoryView.assemble), so each query
assembles a product from global + own + warehouse instead of enriching a single
pre-found group. This lets own-only products surface in recommendations and the
dynamic catalog (findAllWithPimId / findAllByProductCategory).

- GlobalInventoryIndex: O(1) global matching by id/ean/mfn, cached in
  GlobalMatchedInventory (rebuilt on feed reload, synchronized invalidation);
  subsumes ProductIdentifiers.
- GroupInventorySource: shared select-best (mfn-priority then largest) for both
  global and own; GlobalInventorySource narrows to the store's enabled global
  suppliers, OwnInventorySource appends own, WarehouseInventorySource adds stock
  by mfn.
- assemble passes the growing result key through global -> own -> warehouse, so
  warehouse/own resolve via identifiers discovered in the catalog (fixes
  warehouse stock missing on findByEan).
- Result adopts the matched group's full key (InventoryKey.merge), preserving
  the PIM id on single lookups.

Behaviour matches the original (select-best, full key) on clean data; remaining
divergences only affect inconsistent multi-group feeds (fix upstream in
InventoryAutoDiscovery).